<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Vitality CA</string>

    <!-- Missing strings for NSD, Login & Reg, Common, AR -->
    <string name="learn_more_icon_content_description" translatable="false">Icon</string>

    <!-- Missing content descriptions for NSD, Login & Reg, Common -->
    <string name="onboarding_circle_content_description" translatable="false">circle icon</string>
    <string name="login_vitality_logo_content_description" translatable="false">Vitality logo</string>
    <string name="login_email_icon_content_description" translatable="false">Email icon</string>
    <string name="login_password_icon_content_description" translatable="false">Password icon</string>
    <string name="password_visibility_toggle_content_description" translatable="false">Toggle password visibility</string>
    <string name="userpreferences_item_icon_content_description" translatable="false">User preferences item icon</string>
    <string name="splash_screen_insurer_logo_content_description" translatable="false">Insurer logo</string>
    <string name="non_smoker_earn_points_content_description" translatable="false">Earn points icon</string>
    <string name="non_smoker_smoking_status_content_description" translatable="false">Smoking status icon</string>
    <string name="drawer_open_content_description" translatable="false">Open navigation drawer</string>
    <string name="drawer_close_content_description" translatable="false">Close navigation drawer</string>
    <string name="vhr_completed_close_content_description" translatable="false">Close icon</string>
    <string name="points_monitor_item_icon_content_description" translatable="false">Points event icon</string>

    <!-- Generic -->
    <string name="generic_searching_by" translatable="false">Searching by:</string>
    <string name="generic_suggestion" translatable="false">Suggestion:</string>
    <string name="error" translatable="false">Error</string>
    <string name="try_again" translatable="false">Something went wrong. Please try again</string>
    <string name="no_connection" translatable="false">No Connection</string>
    <string name="card_type_not_implemented_yet" translatable="false">CARD TYPE NOT IMPLEMENTED YET</string>

    <!-- Active Rewards -->
    <!--Help strings, not part of Drop 1-->
    <string name="active_rewards_help_suggestions_title" translatable="false">Suggestions</string>
    <string name="active_rewards_help_suggestion_1" translatable="false">Why are my workouts not syncing?</string>
    <string name="active_rewards_help_suggestion_2" translatable="false">How do I earn points with devices and apps?</string>
    <string name="active_rewards_help_suggestion_3" translatable="false">How do I link a device?</string>
    <string name="active_rewards_help_suggestion_4" translatable="false">Which devices are recommended?</string>

    <string name="active_rewards_terms_and_conditions_activation_failed_alert_title" translatable="false">Active Rewards activation failed</string>
    <string name="active_rewards_rewards_list_no_history_title" translatable="false">No history</string>
    <string name="active_rewards_rewards_list_no_history_subtitle" translatable="false">Keep track of all your expired and  used rewards.</string>
    <string name="active_rewards_terms_and_conditions_screen_title" translatable="false">Medically Fit Agreement</string>
    <string name="active_rewards_point_earning_metrics" translatable="false">Point Earning Metrics</string>
    <string name="active_rewards_metrics_used_to_track" translatable="false">These metrics are used to track your healthy habits to earn you points.</string>
    <string name="active_rewards_vhr_connection_error" translatable="false">Can\'t check Active Rewards requirement status without internet connection. Please try again</string>
    <string name="active_rewards_vhr_generic_error" translatable="false">Something went wring during check of Active Rewards requirement status. Please try again</string>
    <string name="active_rewards_target_not_achieved_description" translatable="false">Not enough activity to reach your goal</string>

    <!--Missing Vitality Health Check-->
    <string name="vhc_points_status_icon_content_description" translatable="false">Points status icon</string>
    <string name="vhc_attribute_feedback_icon_content_description" translatable="false">Health attribute feedback icon</string>
    <string name="vhc_learn_more_list_container_icon_content_description" translatable="false">Icon</string>
    <string name="vhc_add_proof_button_content_description" translatable="false">Add proof item button</string>
    <string name="vhc_proof_item_content_description" translatable="false">Proof item image</string>
    <string name="vhc_add_proof_empty_state_icon_content_description" translatable="false">Camera icon</string>
    <string name="vhc_content_description_get_started_with_vitality_health_check" translatable="false">Get started with Vitality Health Check</string>
    <string name="vhc_earn_points_content_description" translatable="false">Earn points</string>
    <string name="vhc_trash_action_text" translatable="false">Trash</string>
    <string name="vhc_summary_value" translatable="false">%1$s %2$s</string>
    <string name="vhc_summary_proof_thumbnail_content_description" translatable="false">Proof item thumbnail image</string>

    <!-- Vitality Health Review -->
    <string name="vhr_button_title" translatable="false">Vitality Health Review</string>
    <string name="vhr_card_title_earn_d_points" translatable="false">Earn %d points</string>
    <string name="vhr_sections_remaining" translatable="false">%d Sections remaining</string>
    <string name="vhr_small_logo" translatable="false">vhr_small_logo</string>
    <string name="vhr_unable_to_submit_error_alert_message" translatable="false">An error occurred while trying to submit your Vitality Health Review. Please try again.</string>
    <string name="vhr_error_title" translatable="false">Error</string>
    <string name="vhr_unknown_error_message" translatable="false">An unknown error occurred.</string>
    <string name="vhr_complete_all_sections_icon_content_description" translatable="false">Stopwatch icon</string>
    <string name="vhr_get_started" translatable="false">Get Started</string>
    <string name="vhr_get_started_button" translatable="false">COMPLETE VHR</string>

    <!-- WDA -->
    <string name="unit_of_measure.kilometer_per_hour_abbreviation" translatable="false">km/h</string>
    <string name="unit_of_measure.kilometer_per_hour_text" translatable="false">Kilometers per Hour</string>

    <!-- VNA -->
    <string name="vna_button_title" translatable="false">Vitality Nutrition Assessment</string>
    <string name="vhr_free_text_placeholder" translatable="false">Value</string>

    <!-- uke partner journey -->
    <string name="temp__partner_journey_successful" translatable="false">Device Purchase Successful</string>
    <string name="temp__partner_journey_success_message" translatable="false">Congratulations on purchasing your %1$s. You will be eligible for more %2$s discounts on %3$s</string>
    <string name="temp__partner_journey_successful_content_description" translatable="false">Device Purchase Successful Checkmark</string>

    <!-- navigation drawer -->
    <string name="navigation_drawer_profile_image_content_description" translatable="false">User profile image</string>
    <string name="navigation_drawer_header_title" translatable="false">%1$s %2$s</string>
    <string name="menu_profile_button_3" translatable="false">Health Profile</string>
    <!--Vitality Age -->
    <string name="vitality_age_subheader" translatable="false">Vitality age modal narration</string>
    <string name="vitality_age_backgroundimage" translatable="false">Vitality age header background image</string>

    <!--My Health -->
    <string name="health_attribute_tips_moreresults_title" translatable="false">More Results</string>
    <string name="feedback_tips_doingwell_missing" translatable="false">Looks like there are no results in healthy range. Make use of the tips and results in the ‘what you can improve’ section.</string>
    <string name="feedback_tips_no_data" translatable="false">No Data</string>

    <!--My Health -->
    <string name="health_attribute_tips_moretips_title" translatable="false">More Tips</string>
    <string name="vitality_age_tips_no_data" translatable="false">No Data</string>
    <string name="my_health_learn_more_outdated_content" translatable="false">Your previous Vitality Age of %1$s was %2$s , however it is currently outdated. you need to retake the Vitality Health review assessment every membership year to ensure that your Vitality Age is updated and correct.</string>
    <string name="my_health_vitality_age_older_outdated" translatable="false">was too high</string>
    <string name="my_health_vitality_age_healthy_outdated" translatable="false">was in good range</string>
    <string name="my_health_vitality_age_outdated_default" translatable="false">Your Vitality Age is outdated. Retake the Vitality Health Review Assessment to update your result.</string>
    <string name="feedback_tips_whattoimprove_missing" translatable="false">Great! Look\'s like theres no improvements needed at the moment.</string>
    <string name="feedback_tips_whatnotprovided_missing" translatable="false">Way to go! You\'ve provided all health results!</string>
    <string name="feedback_tips_whatdoingwell_missing" translatable="false">Looks like there are no results in the healthy range. Make use of the tips and results in the \'what you can improve\' section.</string>

    <string name="vitality_membership_pass_label" translatable="false">Vitality membership pass</string>
    <string name="vitality_membership_pass_email_content" translatable="false">Click on the link below to see a full set of</string>

    <string name="myhealth_feedback_attribute_tips_more_tips" translatable="false">MORE TIPS</string>
    <string name="myhealth_feedback_attribute_recommended_recent_result" translatable="false">Recent Result</string>
    <string name="myhealth_feedback_attribute_recommended_recommended_result" translatable="false">Recommended Result</string>
    <string name="feedback_attribute_section_title_result_good" translatable="false">Tips to Maintain</string>
    <string name="feedback_attribute_section_title_result_whattoimprove" translatable="false">Tips to Improve</string>
    <string name="feedback_attribute_section_title_result_whatnotprovided" translatable="false">Tips of Importance</string>
    <string name="myhealth_feedback_attribute_recommended_why_is_this_important" translatable="false">Why is this important?</string>
    <string name="myhealth_attribute_tested_on_date" translatable="false">Tested on %1$s</string>
    <string name="myhealth_feedback_attribute_placeholder" translatable="false">Complete the Lifestyle Habits Section in the Vitality Health Review to provide information about your physical activity</string>
    <string name="myhealth_feedback_attribute_capture_result" translatable="false">Capture Result</string> <!-- Temporary -->


    <string name="myhealth_feedback_tip_detail_title" translatable="false">Tip</string> <!-- Temporary -->
    <string name="myhealth_feedback_self_submitted" translatable="false">Self Submitted</string>
    <string name="my_health_learn_more_vitality_age_above_outdated_description" translatable="false">Your previous Vitality Age of %s was too high, however it is currently outdated. You need to retake the Vitality Health Review assessment every membership year to ensure that your Vitality Age is updated and correct.</string>
    <string name="card_action_title_choose_rewards">Choose Rewards</string> <!-- Temporary -->

    <string name="registration_invalid_email_footnote_error_36" translatable="false">An Error Occurred</string>
    <string name="terms_and_condition_link_9999" translatable="false"><![CDATA[<a href="https://www.discovery.co.za/" translatable="false">terms and condition</a>]]></string>

    <string name="SV.descriptions_message_1_9999" translatable="false">A mammogram is recommended for women aged 40 and over. It\'s an x-ray examination of the breast, which is used to detect and diagnose breast cancer.</string>
    <string name="SV.descriptions_message_2_9999" translatable="false">Schedule your appointment for one week after your period.\n\nAvoid talcum powder, perfume or body lotion on the day and wear a shirt that you can easily take off.</string>
    <string name="SV.descriptions_message_3_9999" translatable="false">You earn 2 500 Vitality points for a mammogram if you are a female aged 40 and older.\n\nPoints are awarded within two to four weeks.\n\nVisit a healthcare provider for a mammogram once every two years. You will earn the points in the year of the screening, and in the next year.</string>

    <string name="SV.partners_error_message" translatable="false">An error occurred while trying to fetch Participating Partners details. Please try again.</string>

    <string name="download_failed_message" translatable="false">Something went wrong when downloading the file</string>
    <string name="AR_partners_easy_tickets">EasyTickets</string> <!-- Temporary -->
    <string name="AR_partners_easy_tickets_voucher_value">Get 50% discount on Movie Tickets</string> <!-- Temporary -->
    <string name="AR_partners_food_panda">Food Panda</string> <!-- Temporary -->
    <string name="AR_partners_food_panda_voucher_value">Get discount on Meals</string> <!-- Temporary -->

</resources>
