...
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1e000000" />

        <TextView
            android:id="@+id/more_tips"
            style="@style/MyHealthMoreResultsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin_small"
            android:layout_marginTop="8dp"
...
