...
            android:textSize="14sp"
            android:textStyle="normal" />

    </RelativeLayout>

    <TextView
        android:id="@+id/feedback_content_view_placeholder"
        style="@style/MaterialLightSubhead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
...
