...
  <string name="AR.onboarding.common_item3_heading_697">Reach Your Target</string>
  <string name="AR.onboarding.defined_item4_732">You have 30 days to choose your reward before it expires.</string>
  <string name="AR.onboarding.defined_item4_heading_733">Choose Your Reward</string>
  <string name="AR.onboarding.probabilistic_item4_698">You have 30 days to spin the wheel before your spin expires.</string>
  <string name="AR.onboarding.probabilistic_item4_heading_699">Spin the Wheel</string>
  <string name="AR.parnters.starbucks_data_privacy_title_1065">Data Privacy</string>
  <string name="AR.partners.cineworld_name_1054">Cineworld</string>
  <string name="AR.partners.cineworld_voucher_value_1056">Free Movie Tickets</string>
  <string name="AR.partners.fitbit_title_707">Fitbit</string>
  <string name="AR.partners.participating_partners_voucher_value_722">Vouchers up to $15</string>
  <string name="AR.partners.reward_title_1058">Reward</string>
  <string name="AR.partners.starbucks_1417">Starbucks</string>
  <string name="AR.partners.starbucks_data_privacy_accept_button_1066">Accept</string>
...
  <string name="AR.partners.starbucks_reward_alert_title_1063">Confirm Starbucks Reward™ Email address</string>
  <string name="AR.partners.starbucks_reward_email_hint_1061">Starbucks Reward™ Email</string>
  <string name="AR.partners.starbucks_reward_email_message_1059">Make sure that the correct Starbucks Reward™ Email is provided to receive your free drink. Need an account? %1$s</string>
  <string name="AR.partners.starbucks_reward_footnote_1062">The merchants represented are not sponsors of Vitality or otherwise affiliated with Vitality. The logos and other identifying marks attached are trademarks of and are marked by each represented company and/or its affiliates. Please visits each company’s website for additional terms and conditions.</string>
  <string name="AR.partners.starbucks_reward_register_account_1060">Register account</string>
  <string name="AR.partners.starbucks_voucher_value_705">Free Drink</string>
  <string name="AR.partners.vue_name_1055">Vue</string>
  <string name="AR.partners.vue_voucher_value_1057">Free Movie Tickets</string>
  <string name="AR.points_event_detail.cell_title_684">Event</string>
  <string name="AR.points_event_detail.details_section_header_title_735">DETAILS</string>
  <string name="AR.points_event_detail.device_section_header_title_700">DEVICE USED</string>
  <string name="AR.points_event_detail.points_section_header_title_716">POINTS</string>
  <string name="AR.points_event_detail.view_title_685">Event detail</string>
...
  <string name="complete_screen.section_completed_title_2_333">All Sections Completed</string>
  <string name="confirmation.completed_footnote_points_message_119">Points may not be awarded immediately.</string>
  <string name="confirmation.completed_message_118">Way to go, Assessment completed! You only earn points for signing a non-smoker’s declaration once a year.</string>
  <!-- //////////////////////////////////////////////////// Confirmation //////////////////////////////////////////////////// -->
  <string name="confirmation.completed_title_117">Completed!</string>
  <string name="confirmation.completed_title_351">Completed!</string>
  <string name="confirm_title_button_182">Confirm</string>
  <string name="connectivity_error_alert_message_45">A connection error has occurred. Please make sure that you are connected to a wi-fi or cellular network and try again.</string>
  <string name="connectivity_error_alert_title_44">Connectivity error</string>
  <string name="continue_button_title_87">Continue</string>
  <string name="control_health_app_data_message_463">Control your health data from the Health app.</string>
  <string name="data_and_privacy_policy_title_123">Data and Privacy Policy</string>
  <string name="date_title_264">Date</string>
...
